# dbt_learning

./: .pre-commit-config.yaml  README.md  dbt_project.yml  pyproject.toml  requirements.txt
analyses/: total_revenue.sql
macros/: cents_to_dollars.sql  clean_stale_models.sql  limit_data_in_dev.sql  union_tables_by_prefix.sql
models/example/: my_first_dbt_model.sql  my_second_dbt_model.sql  schema.yml
models/marts/core/: all_dates.sql  dim_customers.sql  fct_orders.sql
models/marts/marketing/: customers.sql
models/staging/: union_tables_by_orders_prefix.sql
models/staging/jaffle_shop/: src_jaffle_shop.yml  stg_jaffle_shop.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
models/staging/stripe/: src_stripe.yml  stg_stripe__payments.sql
notebooks/: DDM_Support_Redshift_SQLs.ipynb
tests/: assert_positive_total_for_payments.sql
