[tool.poetry]
name = "dbt_learning"
version = "0.1.1"
description = "Learning dbt"
authors = ["Tam Nguyen <npt.dc@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
types-requests = "^2.28.9"
types-python-dateutil = "^2.8.19"
dbt-bigquery = "^1.5.3"

[tool.poetry.dev-dependencies]
ruff = "^0.0.280"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
flake8 = "^6.0.0"
pep8-naming = "^0.13.3"
pydocstyle = "^6.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
sqlfluff = "^2.1.3"
sqlfluff-templater-dbt = "^2.1.3"
shandy-sqlfmt= {extras = ["jinjafmt"], version = "^0.19.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.LOGGING]
disable = "logging-fstring-interpolation"

[tool.pylint."MESSAGES CONTROL"]
disable = ["import-error", "wrong-import-order", "ungrouped-imports", "pointless-statement"]
max-line-length = 120

[tool.pydocstyle]
ignore = ["D104", "D107", "D212", "D203"]

[tool.sqlfmt]
line_length = 120
exclude=["target/**/*", "dbt_packages/**/*", "notebooks/**/*", "macros/**/*"]

[tool.sqlfluff]

[tool.sqlfluff.core]
max_line_length = 120
dialect = "bigquery"
templater = "dbt"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
exclude_rules = "RF02"

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.dbt]
project_dir = "dbt_learning"
#profiles_dir = "/Users/name/.dbt/"
#profile = "dbt_learning"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"
extended_capitalisation_policy = "lower"
